# nstack

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: cli.rs  main.rs  package_manager.rs  project_structure.rs
src/commands/: add.rs  create.rs  mod.rs
src/features/: drizzle.rs  magicui.rs  mod.rs  shadcn.rs
