[package]
name = "nstack"
version = "0.1.0"
edition = "2024"
authors = ["Rudraditya Thakur (happybear-21)"]
description = "A CLI tool for scaffolding and enhancing Next.js projects"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
